--- a/saml2int.html
+++ b/saml2int.html
@@ -850,7 +850,7 @@ SAML V2.0 Interoperability Deployment Profile V1.0 (Draft)
 <h3 id="_cryptographic_algorithms">3.3. Cryptographic Algorithms</h3>
 <div class="dlist">
 <dl>
-<dt class="hdlist1">[SDP-MD17]</dt>
+<dt class="hdlist1">[SDP-ALG01]</dt>
 <dd>
 <p>Deployments MUST support, and use, the following algorithms when communicating with peers in the context of this profile:</p>
 <div class="ulist">
@@ -910,7 +910,7 @@ SAML V2.0 Interoperability Deployment Profile V1.0 (Draft)
 </ul>
 </div>
 </dd>
-<dt class="hdlist1">[SDP-MD18]</dt>
+<dt class="hdlist1">[SDP-ALG02]</dt>
 <dd>
 <p>The following default digest algorithm MUST be used in conjunction with the above key transport algorithms (the default mask generation function, MGF1 with SHA1, MUST be used):</p>
 <div class="ulist">
