--- a/fedinterop.html
+++ b/fedinterop.html
@@ -469,8 +469,71 @@ dl dd {
 <div id="preamble">
 <div class="sectionbody">
 <h1 style="color: blue; text-align: center; font-size: 150%; margin-bottom: 2em; font-weight: bold;">
-  SAML V2.0 Implementation Profile for Federation Interoperability Version 1.0
+  SAML V2.0 Implementation Profile for Federation Interoperability Version
 </h1>
+<div class="hdlist">
+<table>
+<tr>
+<td class="hdlist1">
+Version
+</td>
+<td class="hdlist2">
+<p>1.0</p>
+</td>
+</tr>
+<tr>
+<td class="hdlist1">
+Date
+</td>
+<td class="hdlist2">
+<p>2018-03-08</p>
+</td>
+</tr>
+<tr>
+<td class="hdlist1">
+Status
+</td>
+<td class="hdlist2">
+<p>Group-Approved Draft</p>
+</td>
+</tr>
+</table>
+</div>
+<div class="ulist">
+<div class="title">Contributors</div>
+<ul>
+<li>
+<p>Editor: Walter Hoehn (The University of Memphis)</p>
+</li>
+<li>
+<p>Scott Cantor (The Ohio State University)</p>
+</li>
+<li>
+<p>Rainer Hörbe (Identinetics GmbH, Kantara Initiative)</p>
+</li>
+<li>
+<p>Tom Scavo (InCommon)</p>
+</li>
+<li>
+<p>Eric Goodman (University of California, Office of the President)</p>
+</li>
+<li>
+<p>Brett Bieber (University of Nebraska-Lincoln)</p>
+</li>
+<li>
+<p>Nick Roy (InCommon)</p>
+</li>
+<li>
+<p>Barry Ribbeck (Rice University)</p>
+</li>
+<li>
+<p>Judith E. Bush (OCLC)</p>
+</li>
+<li>
+<p>Mike Grady (Unicon)</p>
+</li>
+</ul>
+</div>
 <div class="paragraph">
 <div class="title">Abstract</div>
 <p>This document encompasses a set of software conformance requirements intended to facilitate interoperability within the context of full mesh identity federations, such as those found in the research and education sector. It attempts to address a number of common barriers to interoperability and details features that are necessary in order to use SAML metadata as a foundation for scalable trust fabrics. It supercedes the <a href="eGovImplProfile.html">eGovernment Implementation Profile V2.0bis</a> from June 2011.</p>
@@ -478,6 +541,10 @@ dl dd {
 <div class="paragraph">
 <div class="title">Copyright Notice</div>
 <p>SAML v2.0 Implementation Profile for Federation Interoperability ©2017 Internet2 and/or the respective contributors, used under license.  All rights reserved.</p>
+</div>
+<div class="paragraph">
+<div class="title">IPR</div>
+<p>This work is licensed under the <a href="https://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-ShareAlike 3.0</a> United States License.</p>
 </div>
 </div>
 <div id="toc" class="toc">
@@ -511,7 +578,6 @@ dl dd {
 </ul>
 </li>
 <li><a href="#_references">5. References</a></li>
-<li><a href="#_contributors">6. Contributors</a></li>
 </ul>
 </div>
 </div>
@@ -1350,50 +1416,6 @@ dl dd {
 </ul>
 </div>
 </div>
-</div>
-<div class="sect1">
-<h2 id="_contributors">6. Contributors</h2>
-<div class="sectionbody">
-<div class="ulist">
-<ul>
-<li>
-<p>Editor: Walter Hoehn (The University of Memphis)</p>
-</li>
-<li>
-<p>Scott Cantor (The Ohio State University)</p>
-</li>
-<li>
-<p>Rainer Hörbe (Identinetics GmbH, Kantara Initiative)</p>
-</li>
-<li>
-<p>Tom Scavo (InCommon)</p>
-</li>
-<li>
-<p>Eric Goodman (University of California, Office of the President)</p>
-</li>
-<li>
-<p>Brett Bieber (University of Nebraska-Lincoln)</p>
-</li>
-<li>
-<p>Nick Roy (InCommon)</p>
-</li>
-<li>
-<p>Barry Ribbeck (Rice University)</p>
-</li>
-<li>
-<p>Judith E. Bush (OCLC)</p>
-</li>
-<li>
-<p>Mike Grady (Unicon)</p>
-</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-<div id="footer">
-<div id="footer-text">
-Last updated 2017-11-16 22:01:06 CET
 </div>
 </div>
 </body>
