--- a/saml2int.html
+++ b/saml2int.html
@@ -1167,7 +1167,7 @@ SAML V2.0 Interoperability Deployment Profile V1.0 (Draft)
 </dl>
 </div>
 <div class="paragraph">
-<p><em>Note that most such Attributes tend to be defined as multi-valued.</em></p>
+<p><em>Note that most standardized Attributes of this sort tend to be defined as multi-valued.</em></p>
 </div>
 </div>
 </div>
