--- a/saml2int.html
+++ b/saml2int.html
@@ -1232,7 +1232,7 @@ SAML V2.0 Interoperability Deployment Profile V1.0 (Draft)
 <dl>
 <dt class="hdlist1">[SDP-SP28]</dt>
 <dd>
-<p>SPs SHOULD consider support for the SP Request Initiation Profile and Protocol defined in <a href="#IdPDisco">[IdPDisco]</a> as it provides a general, composable building block. SPs MAY support other mechanisms and caching solutions (e.g., cookies) as desired, to reduce the frequency of discovery.</p>
+<p>SPs SHOULD consider support for the Identity Provider Discovery Service Protocol and Profile defined in <a href="#IdPDisco">[IdPDisco]</a> as it provides a general, composable building block. SPs MAY support other mechanisms and caching solutions (e.g., cookies) as desired, to reduce the frequency of discovery.</p>
 </dd>
 </dl>
 </div>
