Updates to reconcile with Kantara template

--- a/edit/fedinterop/main-docinfo.html
+++ b/edit/fedinterop/main-docinfo.html
@@ -31,6 +31,11 @@ div.sect3 > h4 {
   font-size: 110%;
   font-weight: bold;
 }
+.ulist > div.title  {
+  color: black;
+  font-size: 110%;
+  font-weight: bold;
+}
 dl dd {
   margin-left: 0px;
 }
