--- a/fedinterop.html
+++ b/fedinterop.html
@@ -457,6 +457,11 @@ div.sect3 > h4 {
   font-size: 110%;
   font-weight: bold;
 }
+.ulist > div.title  {
+  color: black;
+  font-size: 110%;
+  font-weight: bold;
+}
 dl dd {
   margin-left: 0px;
 }
@@ -469,7 +474,7 @@ dl dd {
 <div id="preamble">
 <div class="sectionbody">
 <h1 style="color: blue; text-align: center; font-size: 150%; margin-bottom: 2em; font-weight: bold;">
-  SAML V2.0 Implementation Profile for Federation Interoperability Version
+  SAML V2.0 Implementation Profile for Federation Interoperability
 </h1>
 <div class="hdlist">
 <table>
@@ -503,7 +508,7 @@ Status
 <div class="title">Contributors</div>
 <ul>
 <li>
-<p>Editor: Walter Hoehn (The University of Memphis)</p>
+<p>Walter Hoehn (The University of Memphis) - <em>Editor</em></p>
 </li>
 <li>
 <p>Scott Cantor (The Ohio State University)</p>
@@ -543,8 +548,8 @@ Status
 <p>SAML v2.0 Implementation Profile for Federation Interoperability ©2017 Internet2 and/or the respective contributors, used under license.  All rights reserved.</p>
 </div>
 <div class="paragraph">
-<div class="title">IPR</div>
-<p>This work is licensed under the <a href="https://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-ShareAlike 3.0</a> United States License.</p>
+<div class="title">License</div>
+<p>This work is licensed under the <a href="https://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-ShareAlike 3.0 United States License</a>.</p>
 </div>
 </div>
 <div id="toc" class="toc">
