--- a/fedinterop.html
+++ b/fedinterop.html
@@ -496,6 +496,14 @@ Date
 </tr>
 <tr>
 <td class="hdlist1">
+Produced by
+</td>
+<td class="hdlist2">
+<p>Federation Interoperability Work Group</p>
+</td>
+</tr>
+<tr>
+<td class="hdlist1">
 Status
 </td>
 <td class="hdlist2">
