--- a/saml2int.html
+++ b/saml2int.html
@@ -483,7 +483,7 @@ Version
 Date
 </td>
 <td class="hdlist2">
-<p>2018-03-08</p>
+<p>2018-03-22</p>
 </td>
 </tr>
 <tr>
@@ -1558,11 +1558,7 @@ Status
 <dl>
 <dt class="hdlist1">[SDP-IDP09]</dt>
 <dd>
-<p>Successful responses MUST be directly signed using a <code>&lt;ds:Signature&gt;</code> element within the <code>&lt;samlp:Response&gt;</code> element.</p>
-</dd>
-<dt class="hdlist1">[SDP-IDP10]</dt>
-<dd>
-<p>Error responses MAY be signed or unsigned.</p>
+<p>Successful responses MUST be directly signed using a <code>&lt;ds:Signature&gt;</code> element within the <code>&lt;samlp:Response&gt;</code> element.  Error responses MAY be signed.</p>
 </dd>
 <dt class="hdlist1">[SDP-IDP11]</dt>
 <dd>
@@ -1933,7 +1929,7 @@ Status
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-03-08 18:31:04 CET
+Last updated 2018-03-22 17:16:08 CET
 </div>
 </div>
 </body>
