--- a/saml2int.html
+++ b/saml2int.html
@@ -457,6 +457,9 @@ div.sect3 > h4 {
   font-size: 110%;
   font-weight: bold;
 }
+dl dd {
+  margin-left: 0px;
+}
 </style>
 </head>
 <body class="article">
