--- a/saml2int.html
+++ b/saml2int.html
@@ -990,7 +990,7 @@ Status
 <dl>
 <dt class="hdlist1">[SDP-SP06]</dt>
 <dd>
-<p>The message SHOULD contain an <code>AssertionConsumerServiceURL</code> attribute and MUST NOT contain am 'AssertionConsumerServiceIndex' attribute (i.e., the desired endpoint MUST be the default, or identified via the <code>AssertionConsumerServiceURL</code> attribute).</p>
+<p>The message SHOULD contain an <code>AssertionConsumerServiceURL</code> attribute and MUST NOT contain an 'AssertionConsumerServiceIndex' attribute (i.e., the desired endpoint MUST be the default, or identified via the <code>AssertionConsumerServiceURL</code> attribute).</p>
 </dd>
 <dt class="hdlist1">[SDP-SP07]</dt>
 <dd>
