--- a/fedinterop.html
+++ b/fedinterop.html
@@ -491,7 +491,7 @@ Version
 Date
 </td>
 <td class="hdlist2">
-<p>2018-03-08</p>
+<p>2018-04-18</p>
 </td>
 </tr>
 <tr>
@@ -507,7 +507,7 @@ Produced by
 Status
 </td>
 <td class="hdlist2">
-<p>Group-Approved Draft</p>
+<p>Kantara Initiative Recommendation</p>
 </td>
 </tr>
 </table>
