--- a/fedinterop.html
+++ b/fedinterop.html
@@ -496,10 +496,10 @@ Date
 </tr>
 <tr>
 <td class="hdlist1">
-Produced by
+Location
 </td>
 <td class="hdlist2">
-<p>Federation Interoperability Work Group</p>
+<p><a href="https://docs.kantarainitiative.org/fi/wg/rec-saml2-implementation-profile-for-fedinterop.html" class="bare">https://docs.kantarainitiative.org/fi/wg/rec-saml2-implementation-profile-for-fedinterop.html</a></p>
 </td>
 </tr>
 <tr>
@@ -507,7 +507,7 @@ Produced by
 Status
 </td>
 <td class="hdlist2">
-<p>Kantara Initiative Recommendation</p>
+<p>This document is a Kantara Initiative Recommendation produced by the <a href="https://kantarainitiative.org/confluence/display/fiwg/Home">Federation Interoperability Work Group</a>. It has been approved by the Membership of the Kantara Initiative. See the Kantara Initiative <a href="https://kantarainitiative.org/confluence/download/attachments/2293776/Kantara%20Operating%20Procedures%20V2.0-20150226.pdf?version=2&amp;modificationDate=1444240055000&amp;api=v2">Operating Procedures</a> for more information.</p>
 </td>
 </tr>
 </table>
