--- a/saml2int.html
+++ b/saml2int.html
@@ -1918,6 +1918,9 @@ Status
 <li>
 <p>Nick Roy, <a href="mailto:nroy@internet2.edu">nroy@internet2.edu</a></p>
 </li>
+<li>
+<p>Alan Buxey, <a href="mailto:alan.buxey@myunidays.com">alan.buxey@myunidays.com</a></p>
+</li>
 </ul>
 </div>
 </div>
