--- a/saml2int.html
+++ b/saml2int.html
@@ -661,7 +661,7 @@ Status
 <dl>
 <dt class="hdlist1">[SDP-G01]</dt>
 <dd>
-<p>Deployments MUST allow for a minimum of three (3) and a maximum of five (5) minutes of clock skew&#8201;&#8212;&#8201;in either direction&#8201;&#8212;&#8201;when interpreting <code>xsd:dateTime</code> values in assertions and when enforcing security policies based thereupon.</p>
+<p>Deployments MUST allow between three (3) and five (5) minutes of clock skew&#8201;&#8212;&#8201;in either direction&#8201;&#8212;&#8201;when interpreting <code>xsd:dateTime</code> values in assertions and when enforcing security policies based thereupon.</p>
 </dd>
 </dl>
 </div>
@@ -783,18 +783,21 @@ Status
 </dl>
 </div>
 <div class="paragraph">
+<p>Metadata MAY include content indicating support for profiles or features beyond the bounds of this profile, but metadata MUST NOT contain content that advertises profile support or features that aren&#8217;t supported by a deployment.</p>
+</div>
+<div class="paragraph">
+<p><em>As an example, deployments that lack support for, or have not tested and integrated an implementation&#8217;s support for the HTTP-Artifact binding <a href="#SAML2Bind">[SAML2Bind]</a> must omit such endpoints.</em></p>
+</div>
+<div class="paragraph">
 <p><em>This profile does not mandate any specific automated support for the production of metadata by a deployment. In fact, automatic generation of metadata has a strong tendency to undermine the correct functioning of peer deployments in the face of key rollover or changes to endpoints or other software features because it tends to change too suddenly to accommodate a graceful transition between states.</em></p>
 </div>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">[SDP-MD05]</dt>
 <dd>
-<p>Metadata MAY include content indicating support for profiles or features beyond the bounds of this profile, but metadata MUST NOT contain content that advertises profile support or features that aren&#8217;t supported or that have not been deliberately and intentionally configured by a deployment.</p>
+<p><em>(REMOVED)</em></p>
 </dd>
 </dl>
-</div>
-<div class="paragraph">
-<p><em>As an example, deployments that lack support for, or have not tested and integrated an implementation&#8217;s support for the HTTP-Artifact binding <a href="#SAML2Bind">[SAML2Bind]</a> must omit such endpoints.</em></p>
 </div>
 <div class="sect4">
 <h5 id="_keys_and_certificates">Keys and Certificates</h5>
@@ -807,8 +810,21 @@ Status
 </dl>
 </div>
 <div class="paragraph">
-<p>These certificates SHOULD be long-lived and self-signed. To avoid problems with non-conforming SAML implementations, certificates in metadata SHOULD NOT be expired (though deployments complying with this profile MUST accept expired certificates by virtue of <a href="#SAML2MDIOP">[SAML2MDIOP]</a>).</p>
+<p><em>By virtue of <a href="#SAML2MDIOP">[SAML2MDIOP]</a>, this profile (and SAML in general) does not place requierments on the non-key material contained in X.509 certificates in metadata. However, the following are suggested practices to avoid interoperability issues with deployments outside the scope of this profile:</em></p>
 </div>
+<div class="ulist">
+<ul>
+<li>
+<p><em>use long-lived certificates</em></p>
+</li>
+<li>
+<p><em>use self-signed certificates</em></p>
+</li>
+<li>
+<p><em>do not use expired certificates</em></p>
+</li>
+<li>
+<p><em>do not sign certificates with MD5- or SHA1-based signature algorithms.</em></p>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">[SDP-MD07]</dt>
@@ -821,13 +837,16 @@ Status
 </dd>
 <dt class="hdlist1">[SDP-MD09]</dt>
 <dd>
-<p>Certificates used MUST NOT be signed with an MD5-based signature algorithm and SHOULD NOT be signed with a SHA1-based signature algorithm.</p>
+<p>(<em>REMOVED</em>)</p>
 </dd>
 <dt class="hdlist1">[SDP-MD10]</dt>
 <dd>
 <p>By virtue of the profile&#8217;s overall requirements, an IdP&#8217;s metadata MUST include at least one signing certificate (that is, an <code>&lt;md:KeyDescriptor&gt;</code> with no <code>use</code> attribute or one set to <code>signing</code>), and an SP&#8217;s metadata MUST include at least one encryption certificate (that is, an <code>&lt;md:KeyDescriptor&gt;</code> with no <code>use</code> attribute or one set to <code>encryption</code>).</p>
 </dd>
 </dl>
+</div>
+</li>
+</ul>
 </div>
 </div>
 <div class="sect4">
@@ -840,7 +859,7 @@ Status
 </dd>
 <dt class="hdlist1">[SDP-MD12]</dt>
 <dd>
-<p>The content of the <code>&lt;mdui:Logo&gt;</code> element MUST be either an <code>https</code> URL or an in-line image embedded in a <code>data</code> URI element.</p>
+<p>The content of the <code>&lt;mdui:Logo&gt;</code> element MUST be either an <code>https</code> URL or an in-line image embedded in a <code>data</code> URI element. The size of the <code>data</code> URI used in a <code>&lt;mdui:Logo&gt;</code> element is not limited to 256 characters.</p>
 </dd>
 <dt class="hdlist1">[SDP-MD13]</dt>
 <dd>
@@ -1058,7 +1077,8 @@ Status
 </dd>
 <dt class="hdlist1">[SDP-SP13]</dt>
 <dd>
-<p>The response to such errors MUST direct users to appropriate support resources offered by the SP or alternatively to the <code>errorURL</code> attribute in an IdP&#8217;s metadata.</p>
+<p>The response to such errors MUST direct users to appropriate support resources offered by the SP or, alternatively, to the <code>errorURL</code> attribute in an IdP&#8217;s metadata if the cause of the error is inferred to be a lack
+of sufficient or appropriate attributes about the user to operate successfully.</p>
 </dd>
 </dl>
 </div>
@@ -1104,11 +1124,14 @@ Status
 <div class="paragraph">
 <p><em>If an SP requires coordination and/or correlation of user activity between itself and other SPs, then the SAML Attribute named <code>urn:oasis:names:tc:SAML:attribute:subject-id</code> is appropriate. Otherwise the SAML Attribute named <code>urn:oasis:names:tc:SAML:attribute:pairwise-id</code> can be used.</em></p>
 </div>
+<div class="paragraph">
+<p><em>SPs MAY support legacy or historical <code>&lt;saml:NameID&gt;</code> and <code>&lt;saml:Attribute&gt;</code> identifier content for compatibility reasons but MUST NOT require their use.</em></p>
+</div>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">[SDP-SP17]</dt>
 <dd>
-<p>SPs MAY support legacy or historical <code>&lt;saml:NameID&gt;</code> and <code>&lt;saml:Attribute&gt;</code> content for compatibility reasons but MUST NOT require their use.</p>
+<p><em>(REMOVED)</em></p>
 </dd>
 </dl>
 </div>
@@ -1298,7 +1321,7 @@ Status
 <dl>
 <dt class="hdlist1">[SDP-SP31]</dt>
 <dd>
-<p>Requests MUST be signed.</p>
+<p>Requests MUST be signed (via a signature created in accordance with the HTTP=Redirect binding [SAML2Bind]).</p>
 </dd>
 <dt class="hdlist1">[SDP-SP32]</dt>
 <dd>
@@ -1338,7 +1361,7 @@ Status
 <dl>
 <dt class="hdlist1">[SDP-SP36]</dt>
 <dd>
-<p>Responses MUST be signed.</p>
+<p>Responses MUST be signed (via a signature created in accordance with the HTTP=Redirect binding [SAML2Bind]).</p>
 </dd>
 </dl>
 </div>
@@ -1421,10 +1444,10 @@ Status
 <p>at least one <code>&lt;md:AssertionConsumerService&gt;</code> endpoint element</p>
 </li>
 <li>
-<p>at least one <code>&lt;md:KeyDescriptor&gt;</code> element whose <code>use</code> attribute is omitted or set to <code>signing</code></p>
+<p>at least one <code>&lt;md:KeyDescriptor&gt;</code> element whose <code>use</code> attribute is omitted or set to <code>encryption</code></p>
 </li>
 <li>
-<p>at least one <code>&lt;md:KeyDescriptor&gt;</code> element whose <code>use</code> attribute is omitted or set to <code>encryption</code></p>
+<p>if the SP generates single logout requests: at least one <code>&lt;md:KeyDescriptor&gt;</code> element whose <code>use</code> attribute is omitted or set to <code>signing</code></p>
 </li>
 </ul>
 </div>
@@ -1566,6 +1589,11 @@ Status
 </dd>
 </dl>
 </div>
+<div class="paragraph">
+<p><em>While encryption is viewed in some quarters as onerous or unnecessary, interopability is enhanced by uniformity. Moreover,
+a spate of recent vulnerabilities across the industry would have been almost entirely mitigated by its use, demonstrating
+that it is no longer acceptable to view it as an optional part of front-channel delivery of assertions, if it ever was.</em></p>
+</div>
 </div>
 </div>
 <div class="sect3">
@@ -1619,9 +1647,12 @@ Status
 <dl>
 <dt class="hdlist1">[SDP-IDP18]</dt>
 <dd>
-<p>It is RECOMMENDED that the content of <code>&lt;saml:AttributeValue&gt;</code> elements be limited to a single child text node (i.e., a simple string value).</p>
+<p>It is RECOMMENDED that the content of each <code>&lt;saml:AttributeValue&gt;</code> element be limited to a single child text node (i.e., a simple string value) and that multiple values of a <code>&lt;saml:Attribute&gt;</code> be expressed as individual <code>&lt;saml:AttributeValue&gt;</code> elements rather than embedded in a delimited form within a single element.</p>
 </dd>
 </dl>
+</div>
+<div class="paragraph">
+<p><em>Note that this refers to <code>&lt;saml:AttributeValue&gt;</code> elements, not <code>&lt;saml:Attribute&gt;</code> elements, and refers to the form of each individual value. It discourages the use of complex XML content models within the value of an Attribute.</em></p>
 </div>
 </div>
 </div>
@@ -1674,7 +1705,7 @@ Status
 <dl>
 <dt class="hdlist1">[SDP-IDP24]</dt>
 <dd>
-<p>Requests MUST be signed.</p>
+<p>Requests MUST be signed ((via a signature created in accordance with the HTTP=Redirect binding [SAML2Bind]).</p>
 </dd>
 <dt class="hdlist1">[SDP-IDP25]</dt>
 <dd>
@@ -1709,7 +1740,7 @@ Status
 <dl>
 <dt class="hdlist1">[SDP-IDP28]</dt>
 <dd>
-<p>Responses MUST be signed.</p>
+<p>Responses MUST be signed (via a signature created in accordance with the HTTP=Redirect binding [SAML2Bind]).</p>
 </dd>
 <dt class="hdlist1">[SDP-IDP29]</dt>
 <dd>
@@ -1746,9 +1777,12 @@ Status
 <div class="ulist">
 <ul>
 <li>
-<p>an <code>&lt;md:IDPSSODescriptor&gt;</code> role element containing an <code>errorURL</code> attribute and an appropriate URL value</p>
+<p>an <code>&lt;md:IDPSSODescriptor&gt;</code> role element</p>
 <div class="ulist">
 <ul>
+<li>
+<p>an <code>errorURL</code> attribute and an appropriate URL value for a page providing appropriate remediation for an inability to provide Attributes to the SP necessary for its function</p>
+</li>
 <li>
 <p>at least one <code>&lt;md:SingleSignOnService&gt;</code> endpoint element</p>
 </li>
