--- a/saml2int.html
+++ b/saml2int.html
@@ -478,7 +478,7 @@ SAML V2.0 Interoperability Deployment Profile V1.0 (Draft)
 Version
 </td>
 <td class="hdlist2">
-<p>0.01</p>
+<p>0.03</p>
 </td>
 </tr>
 <tr>
@@ -486,7 +486,7 @@ Version
 Date
 </td>
 <td class="hdlist2">
-<p>2018-03-22</p>
+<p>2018-08-02</p>
 </td>
 </tr>
 <tr>
@@ -494,7 +494,7 @@ Date
 Status
 </td>
 <td class="hdlist2">
-<p>In Progress</p>
+<p>Community Draft</p>
 </td>
 </tr>
 </table>
@@ -1943,7 +1943,7 @@ that it is no longer acceptable to view it as an optional part of front-channel 
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-03-22 17:16:08 CET
+Last updated 2018-08-02 18:31:13 CEST
 </div>
 </div>
 </body>
